--- a/.github/workflows/check-readme-links.yml
+++ b/.github/workflows/check-readme-links.yml
@@ -1,9 +1,10 @@
 name: Check README Links
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["pages-build-deployment"]
+    types:
+      - completed
   workflow_dispatch:
 
 env:
@@ -12,6 +13,7 @@ env:
 jobs:
   check_links:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
